assets/css/main.css
@font-face {
  font-family: "Inter";
  font-style: normal;
  font-weight: 300;
  font-display: swap;
  src: url("../fonts/Inter-Regular.woff") format("woff2"),
    url("../fonts/Inter-Regular.woff.woff") format("woff");
}

@font-face {
  font-family: "Inter";
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url("../fonts/Inter-Bold.woff2") format("woff2"),
    url("../fonts/Inter-Bold.woff") format("woff");
}

:root {
  --background-color: #dad8d1;
  --text-color: #222222;
  --text-hover-color: #3a3a3a;

  --font-size-xxxl: 2rem;
  --font-size-xxl: 2rem;
  --font-size-xl: 1.5rem;
  --font-size-lg: 1rem;
  --font-size-md: 1rem;
  --font-size-sm: 0.875rem;

  --navigation-height: 62px;
  --footer-height: 52px;
}

@media screen and (min-width: 900px) {
  :root {
    --navigation-height: 39px;
    --footer-height: 130px;
  }
}

@media screen and (min-width: 1100px) {
  :root {
    --font-size-xxxl: 3rem;
    --font-size-xxl: 2.5rem;
    --font-size-xl: 2rem;
    --font-size-lg: 1.5rem;
    --font-size-md: 1rem;
    --font-size-sm: 0.875rem;
  }
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: var(--background-color);
  color: var(--text-color);
  font-family: "Inter", sans-serif;
  min-height: -webkit-fill-available;
}

/* Links */

a {
  color: var(--text-color);
  text-decoration: none;
}

a:hover {
  color: var(--text-hover-color);
}

/* Button link */

.button {
  border: 2px solid transparent;
  color: var(--text-color);
  display: inline-block;
  font-size: 1rem;
  padding: 8px 0;
  text-decoration: none;
  text-transform: uppercase;
}

.button:hover {
  text-decoration: underline;
}

.button:focus {
  border: 2px solid var(--text-hover-color);
}

/* Header */

.header {
  border-bottom: 1px solid transparent;
  padding: 16px;
  position: sticky;
  top: 0;
  z-index: 6;
}

.header.open {
  border-bottom: 1px solid var(--text-color);
  margin-bottom: 24px;
}

.header ul {
  display: flex;
  gap: 16px;
  list-style: none;
  margin: 0;
  padding: 0;
}

.header li {
  display: inline;
}

.header__nav {
  height: 0;
  overflow: hidden;
  transition: all 150ms ease-in-out;
}

.header.open .header__nav {
  height: 130px;
  padding-top: 16px;
}

.header__item {
  color: inherit;
  display: inline-block;
  font-size: 1rem;
  line-height: 135%;
  padding: 8px 0;
  text-decoration: none;
  text-transform: uppercase;
}

.header__toggle {
  background-color: transparent;
  border: none;
  cursor: pointer;
  height: 29px;
  display: block;
  position: relative;
  width: 31px;
}

.header__toggle:before,
.header__toggle:after {
  background: var(--text-color);
  content: "";
  display: block;
  height: 5px;
  left: 0;
  position: absolute;
  transform-origin: left center;
  transition: all 150ms ease-in-out;
  width: 100%;
}

.header__toggle:before {
  top: 7px;
}

.header__toggle:after {
  top: 17px;
}

.header.open .header__toggle:before {
  transform: rotate(45deg) translateY(-8px);
}

.header.open .header__toggle:after {
  transform: rotate(-45deg) translateY(8px);
}

@media screen and (min-width: 900px) {
  .header {
    padding: 0 16px;
  }

  .header.open {
    border-bottom: none;
    margin-bottom: 0;
  }

  .header__toggle {
    display: none;
  }

  .header__nav {
    display: grid;
    gap: 16px;
    grid-template-columns: 2fr 1fr 1fr;
    height: auto;
  }

  .header ul {
    gap: 32px;
  }

  .header ul[data-align="right"] {
    justify-content: flex-end;
  }

  .header__contact li {
    margin-left: 8px;
  }
}

/* Logo */

.logo {
  display: block;
  padding: 0 16px;
}

.logo img {
  width: 100%;
}

@media screen and (min-width: 900px) {
  .logo {
    padding: 0 16px;
  }
}

@media screen and (min-width: 1100px) {
  .logo {
    margin-bottom: 80px;
    padding-bottom: 0;
  }
}

/* Home - grid */

.home {
  display: flex;
  flex-direction: column;
  gap: 16px;
  margin: 32px 0;
  padding: 0 16px;
}

.home__row {
  display: grid;
  gap: 16px;
}

@media screen and (min-width: 900px) {
  .home__row {
    grid-template-columns: repeat(2, 1fr);
  }

  .home__row--content-left > * {
    grid-column: 1 / span 2;
  }

  .home__row--content-left .gallery {
    display: grid;
    gap: 16px;
    grid-template-columns: repeat(2, 1fr);
    margin-top: 64px;
  }

  .home__row--content-right > * {
    grid-column: 1 / span 2;
  }
}

@media screen and (min-width: 1100px) {
  .home__row--content-left > * {
    grid-column: 1 / span 1;
  }

  .home__row--content-left .gallery {
    margin-top: 80px;
  }

  .home__row--content-right > * {
    grid-column: 2 / span 1;
  }
}

.home__text {
  font-size: 2rem;
  font-weight: 700;
}

.home__more {
  margin: 24px 0 64px;
}

@media screen and (min-width: 1100px) {
  .home__more {
    margin-bottom: 80px;
  }
}

/* Aspect ratio (1x1, 2x1) */

.ratio[data-ratio="1x1"] {
  aspect-ratio: 1 / 1;
}

.ratio[data-ratio="2x1"] {
  aspect-ratio: 2 / 1;
}

.ratio > * {
  width: 100%;
}

/* Project thumbnail */

.thumbnail {
  position: relative;
}

.thumbnail__title {
  display: block;
  font-size: var(--font-size-sm);
  font-weight: normal;
  height: 100%;
  left: 0;
  line-height: 1.35;
  padding: 16px;
  position: absolute;
  text-transform: uppercase;
  top: 0;
  width: 100%;
  z-index: 3;
}

.thumbnail__video {
  display: none;
}

.thumbnail__photo {
  display: block;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  z-index: 1;
}

@media screen and (min-width: 900px) {
  .thumbnail__video {
    display: block;
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    z-index: 2;
  }
}

/* Table */

.table {
  margin: 64px 0;
  padding: 0 16px;
}

.table__header {
  border-bottom: 2px solid var(--text-color);
  padding-bottom: 16px;
  text-transform: uppercase;
}

.table__row {
  border-bottom: 2px solid var(--text-color);
  display: grid;
  grid-template-areas: "id id" "title title" "date action";
  padding: 16px 0;
}

.table__cell[data-name="id"] {
  grid-area: id;
}

.table__cell[data-name="title"] {
  grid-area: title;
  margin: 16px 0 32px;
  text-transform: uppercase;
}

.table__cell[data-name="date"] {
  grid-area: date;
}

.table__cell[data-name="action"] {
  grid-area: action;
  text-align: right;
}

.table__cell[data-name="action"] {
  text-transform: uppercase;
}

@media screen and (min-width: 900px) {
  .table__row {
    gap: 16px;
    grid-template-areas: "id title date action";
    grid-template-columns: 1fr 4fr 1fr 70px;
    padding: 40px 0;
  }

  .table__cell[data-name="title"] {
    margin: 0;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  .table__row:hover .table__cell[data-name="title"] {
    text-decoration: underline;
  }
}

/* About page */

.about {
  display: grid;
  gap: 48px;
  margin: 48px 0;
}

.about p {
  line-height: 1.35;
  padding: 0 16px;
}

.about__intro {
  font-size: 2rem;
  font-weight: 700;
}

.about__more {
  font-size: 1.5rem;
}

@media screen and (min-width: 900px) {
  .about {
    gap: 64px 16px;
    margin: 64px 0;
  }

  .about p {
    max-width: 800px;
  }
}

@media screen and (min-width: 1100px) {
  .about {
    grid-template-columns: repeat(2, 1fr);
    padding: 0 16px;
  }

  .about p {
    padding: 0;
  }
}

/* Content */

.content {
  line-height: 1.35;
}

.content a {
  text-decoration: underline;
}

.content a:hover {
  text-decoration: none;
}

.content h1 {
  font-size: var(--font-size-xxxl);
  font-weight: 700;
  margin-bottom: 24px;
}

.content h2 {
  font-size: var(--font-size-xxl);
  font-weight: 700;
}

.content h3 {
  font-size: var(--font-size-xl);
  font-weight: 700;
}

.content .text-0 {
  font-size: var(--font-size-xxl);
  font-weight: 700;
}

.content .text-1 {
  font-size: var(--font-size-lg);
}

.content .text-2 {
  font-size: var(--font-size-md);
  margin: 16px 0;
}

.content ul {
  list-style: disc;
  margin-left: 16px;
}

.content li {
  font-size: var(--font-size-sm);
}

.content .label {
  font-size: var(--font-size-sm);
  margin: 8px 0;
  text-transform: uppercase;
}

.content .note {
  font-size: var(--font-size-sm);
  font-style: italic;
}

.content .center {
  text-align: center;
}

/* Project */

.project {
  display: flex;
  flex-direction: column;
  gap: 80px;
}

.project__back {
  display: inline-block;
  font-size: 0;
}

.project__section {
  display: grid;
  gap: 16px;
  padding: 0 16px;
}

.project__info {
  display: flex;
  flex-direction: column;
  gap: 32px;
}

.project__gallery {
  display: grid;
  font-size: 0;
  gap: 16px;
  padding: 0 16px;
}

.project__gallery > :empty {
  display: none;
}

.project__gallery .project__gallery {
  padding: 0; /* gallery can be nested */
}

@media screen and (min-width: 1100px) {
  .project {
    margin: 80px 0;
  }

  .project__section {
    grid-template-areas: "header header header header" "left left middle right";
    grid-template-columns: repeat(4, 1fr);
  }

  .project__section > [data-area="header"] {
    grid-area: header;
  }

  .project__section > [data-area="left"] {
    grid-area: left;
  }

  .project__section > [data-area="middle"] {
    grid-area: middle;
  }

  .project__section > [data-area="right"] {
    display: flex;
    flex-direction: column;
    gap: 40px;
    grid-area: right;
  }

  .project__section > [data-size="big"] {
    grid-column: span 2;
  }

  .project__gallery {
    grid-template-columns: repeat(2, 1fr);
  }

  .project__gallery > :empty {
    display: block;
  }
}

/* Error page */

.error {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: calc(100vh - var(--navigation-height) - var(--footer-height));
  min-height: calc(var(--vh, 1vh) * 100 - var(--navigation-height) - var(--footer-height));
  padding: 16px;
}

/* Footer */

.footer {
  padding: 16px;
}

@media screen and (min-width: 900px) {
  .footer {
    display: grid;
    gap: 16px;
    grid-template-columns: repeat(2, 1fr);
  }
}

.footer__social {
  display: none;
  line-height: 1.6;
  list-style: none;
  margin: 0;
  padding: 0;
  text-transform: uppercase;
}

@media screen and (min-width: 900px) {
  .footer__social {
    display: block;
  }
}

.footer__copy {
  margin: 0;
  text-align: center;
  text-transform: uppercase;
}

@media screen and (min-width: 900px) {
  .footer__copy {
    text-align: right;
  }
}

